--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <meta name="msapplication-TileColor" content="#2d89ef">
 <meta name="theme-color" content="#ffffff">
 <title>Head Hunter</title>
+
 <link rel="stylesheet" href="style/index.css">
+<script defer src="scripts/index.js"></script>
 
 </head>
 <body class="body">
