--- a/index.html
+++ b/index.html
@@ -303,6 +303,68 @@
 </div>
 </main>
 
+<footer class="footer">
+  <div class="container footer__container">
+<div class="footer__contacts">
+      <ul class="footer__list">
+  <li class="footer__item">
+    <a class="footer__link" href="#">Поиск сотрудников</a>
+  </li>
+  <li class="footer__item">
+    <a class="footer__link" href="#">Помощь</a>
+  </li>
+  <li class="footer__item">
+    <a class="footer__link" href="#">Пользовательское соглашение</a>
+  </li>
+  <li class="footer__item">
+    <a class="footer__link" href="#">О компании</a>
+  </li>
+  <li class="footer__item">
+    <a class="footer__link" href="#">Наши вакансии</a>
+  </li>
+</ul>
+<ul class="footer__list">
+  <li class="footer__item">
+    <a class="footer__link" href="#">Рынок труда</a>
+  </li>
+  <li class="footer__item">
+    <a class="footer__link" href="#">Каталог компаний</a>
+  </li>
+  <li class="footer__item">
+    <a class="footer__link" href="#">Работа по профессиям
+    </a>
+  </li>
+</ul>
+
+<ul class="footer__list">
+<li class="footer__item">
+  <a class="footer__link" href="#">Уведомления в мессенджер</a>
+</li>
+<ul class="footer__list-icon">
+  <li class="footer__icon"><a class="footer__icon-link footer__icon-link_vk" href="#"></a></li>
+  <li class="footer__icon"><a class="footer__icon-link footer__icon-link_ok" href="#"></a></li>
+  <li class="footer__icon"><a class="footer__icon-link footer__icon-link_dzen" href="#"></a></li>
+  <li class="footer__icon"><a class="footer__icon-link footer__icon-link_tg" href="#"></a></li>
+</ul>
+<!-- /.footer__list-icon -->
+<li class="footer__item">
+  <a class="footer__link" href="#">
+Switch to English
+  </a>
+</li>
+</ul>
+<img class="footer__logo" src="img/logo.svg" alt="лого hh.ru">
+</div>
+<!-- /.footer__contacts -->
+<div class="footer__end">
+  <p class="footer__date">© 2023 ООО «Хэдхантер»</p>
+  <p class="footer__info">На информационном ресурсе hh.ru применяются рекомендательные технологии (информационные технологии предоставления информации на основе сбора, систематизации и анализа сведений, относящихся к предпочтениям пользователей сети «Интернет», находящихся на территории Российской Федерации)</p>
+</div>
+<!-- /.footer__end -->
+
+  </div>
+</footer>
+
 <div class="overlay overlay_vacancy">
 <div class="modal">
 <button class="modal__close">✕</button>
