Сделал поиск и рендер

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 <title>Head Hunter</title>
 
 <link rel="stylesheet" href="style/index.css">
-<script defer src="scripts/index.js"></script>
+<!-- for develop -->
+<!-- <script defer src="scripts/index.js"></script> -->
+<!-- for github -->
+<script defer src="scripts/index2.js"></script>
 
 </head>
 <body class="body">
