Навел порядок в коде

--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
 <meta name="msapplication-TileColor" content="#2d89ef">
 <meta name="theme-color" content="#ffffff">
 <title>Head Hunter</title>
-
 <link rel="stylesheet" href="style/index.css">
-<!-- for develop -->
+<!-- for develop old-->
 <!-- <script defer src="scripts/index.js"></script> -->
-<!-- for github -->
-<script defer src="scripts/index2.js"></script>
+<!-- for github old-->
+<!-- <script defer src="scripts/index2.js"></script> -->
+
+
+<!-- for develop clear работаю с ним-основной -->
+<!-- <script defer src="scripts/clear-code/index-clear.js"></script> -->
+<!-- for github clear работаю с ним-->
+<script defer src="scripts/index-clear2.js"></script>
 
 </head>
 <body class="body">
@@ -78,7 +83,8 @@
 
 <main class="main">
 <div class="container">
-<h1 class="found">38 вакансий &laquo;<span class="found__item">Junior Frontend</span>&raquo;</h1>
+  <h1 class="found">Последние вакансии</h1>
+<!-- <h1 class="found">38 вакансий &laquo;<span class="found__item">Junior Frontend</span>&raquo;</h1> -->
 <div class="option">
 <div class="option__field option__field_order">
 <button class="option__btn option__btn_order">По дате</button>
