--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- for develop clear работаю с ним-основной -->
 <!-- <script defer src="scripts/clear-code/index-clear.js"></script> -->
 <!-- for github clear работаю с ним-->
-<script defer src="scripts/index-clear2.js"></script>
+<script defer src="scripts/clear-code/index-clear2.js"></script>
 
 </head>
 <body class="body">
