Сделал фильтры по странам и городам

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 <!-- for github old-->
 <!-- <script defer src="scripts/index2.js"></script> -->
 
-
 <!-- for develop clear работаю с ним-основной -->
 <!-- <script defer src="scripts/clear-code/index-clear.js"></script> -->
 <!-- for github clear работаю с ним-->
@@ -420,6 +419,7 @@ Switch to English
 <li class="city__item"><a class="city__link" href="#city">Екатеринбург</a></li>
 <li class="city__item"><a class="city__link" href="#city">Челябинск</a></li>
 <li class="city__item"><a class="city__link" href="#city">Калининград</a></li>
+<li class="city__item"><a class="city__link" href="#city">Магнитогорск</a></li>
 </ul>
 </li>
 <li class="city__region-item">
